# Cuda_backprop_optimisation

./: .gitignore  CMakeLists.txt  README.md
Day-9/: Naive_matMul.cu
benchmark/: generate_plots.py  plot_results.py  run_all.py  run_benchmark.py
common/: cuda_utils.cuh  data_loader.cpp  data_loader.h  mlp_config.h  timer.h
data/: download_mnist.py
v0_cpu_baseline/: main.cpp  mlp_cpu.cpp  mlp_cpu.h
v1_naive_cuda/: main.cu
v2_tiled_gemm/: main.cu
v3_fused_kernels/: main.cu
v4_streams/: main.cu
v5_mixed_precision/: main.cu
v6_tensor_cores/: main.cu
